PROJECT (SAI)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_BUILD_BOARD "x86")

SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -Werror -g2 -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")

SET(CHIPNAME "duet2")
SET(SDKHOME "../ctcsdk")

INCLUDE_DIRECTORIES(${SAIPROJECT_SOURCE_DIR}/redis/deps/hiredis)
ADD_DEFINITIONS(-DSDK_IN_USERMODE)

IF(${CHIPNAME} STREQUAL "duet2")
    ADD_DEFINITIONS(-DDUET2)
ELSEIF(${CHIPNAME} STREQUAL "goldengate")
    ADD_DEFINITIONS(-DGOLDENGATE)
ELSEIF(${CHIPNAME} STREQUAL "tsingma")
    ADD_DEFINITIONS(-DTSINGMA)
ENDIF(${CHIPNAME} STREQUAL "duet2")

ADD_DEFINITIONS(-m64)
ADD_DEFINITIONS(-Wall)
ADD_DEFINITIONS(-fPIC -Wno-long-long -Wformat -m64)

ADD_SUBDIRECTORY(ctcsai)

MESSAGE(STATUS "This is BINARY dir "${SAIP_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir "${SAIP_SOURCE_DIR})
MESSAGE(STATUS "This is BOARD type "${CMAKE_BUILD_BOARD})

